@@ -22,6 +22,10 @@ FIXES
 
  * Login page errors
 
+ * Widget CustomForm: reset to default behaviour error with functions
+
+ * Reference fields errors with domain's attributes
+
 
 
 
